atualização requisiçoes e adicionando codigo
