# routes/adicionalRoutes.js
@@ -10,14 +10,14 @@ const Adicional = require('../models/Adicional')
 router.post('/adicional', async (req,res) => {
     // req.body
 
-    const {nome, descrição, preço, vegetariano} = req.body
+    const {codigo, nome, descrição, preço, vegetariano} = req.body
     console.log(req.body)
 
 
    
 
     const adicional = {
-        nome, descrição, preço, vegetariano, 
+        codigo, nome, descrição, preço, vegetariano, 
     }
     
     try {
@@ -25,13 +25,60 @@ router.post('/adicional', async (req,res) => {
         
     //---------------------------------validações----------------------------------
 
+     //-----------------------validação caso esteja faltando inserir um dado-----------------------    
 
-    //validação caso esteja faltando inserir um dado
+     if(!nome && !descrição && !preço && !vegetariano){
+        res.status(400).json({error:'É necessario informar nome, descrição, preço e se o adicional é ou não vegetariano'})
+        return 
+        }
+
+        if(!nome && !descrição && !preço){
+            res.status(400).json({error:'É necessario informar nome, descrição e o preço do adicional'})
+            return 
+            }
+    
+        if(!nome && !descrição && !vegetariano){
+            res.status(400).json({error:'É necessario informar nome, descrição e se o adicional é ou não vegetariano'})
+            return 
+            }
+
+        if(!nome && !preço && !vegetariano){
+            res.status(400).json({error:'É necessario informar nome, preço e se o adicional é ou não vegetariano'})
+            return 
+            }
+
+        if(!descrição && !preço && !vegetariano){
+            res.status(400).json({error:'É necessario informar preço, descrição, preço e se o adicional é ou não vegetariano'})
+            return 
+            }
+
+        if(!nome && !descrição ) {
+            res.status(400).json({error:'É necessario informar o nome e a descrição do adicional'})
+            return
+            }
+
+        if(!nome && !preço ) {
+            res.status(400).json({error:'É necessario informar o nome e o preço do adicional'})
+            return
+            }
+
+        if(!nome && !vegetariano ) {
+            res.status(400).json({error:'É necessario informar o nome e se o adicional é vegetariano'})
+            return
+            }
+
+        if(!descrição && !vegetariano ) {
+            res.status(400).json({error:'É necessario informar a descrição e se o adicional é vegetariano'})
+            return
+            }
+        
 
         if(!nome) {
             res.status(400).json({error:'É necessario informar o nome do adicional'})
             return
         }
+
+        
     
         if(!descrição) {
             res.status(400).json({error:'É necessario informar a descrição do adicional'})
@@ -42,35 +89,46 @@ router.post('/adicional', async (req,res) => {
             res.status(400).json({error:'É necessario informar o preço do adicional'})
             return
         }
+
         
-        if(vegetariano == "undefined") {
-            res.status(500).json({error:'É necessario informar se o adicional e vegetariano ou não'})
+    
+        if(vegetariano == undefined) {
+            res.status(500).json({error:'É necessario informar se o adicional é vegetariano ou não'})
             return
         }
 
 
+    
     //---------------validação caso o dado informado já exista na base de dados-------------------------
 
- 
-        //nome
-        const nomeExiste = await Adicional.findOne ({nome: nome})
+        //código
+            const codigoExiste = await Adicional.findOne ({codigo: codigo})
 
-        if (nomeExiste){
-            res.status(400).json({
-                message: 'O nome informado já existe, por favor verifique os dados e tente novamente'
-            })
-            return
-        }
+                if (codigoExiste){
+                    res.status(400).json({
+                        message: 'O código informado já existe, por favor verifique os dados e tente novamente'
+                    })
+                    return
+                }
+        //nome
+            const nomeExiste = await Adicional.findOne ({nome: nome})
+
+                if (nomeExiste){
+                    res.status(400).json({
+                        message: 'O nome informado já existe, por favor verifique os dados e tente novamente'
+                    })
+                    return
+                }
 
         //descrição
-        const descriçãoExiste = await Adicional.findOne ({descrição: descrição})
+            const descriçãoExiste = await Adicional.findOne ({descrição: descrição})
 
-        if (descriçãoExiste){
-            res.status(400).json({
-                message: 'A descrição informada já existe, por favor verifique os dados e tente novamente'
-            })
-            return
-        }
+                if (descriçãoExiste){
+                    res.status(400).json({
+                        message: 'A descrição informada já existe, por favor verifique os dados e tente novamente'
+                    })
+                    return
+                }
 
      
         await Adicional.create(adicional)
@@ -84,7 +142,7 @@ router.post('/adicional', async (req,res) => {
     })
     
 
-    //------------------------------------Get------------------------------------
+    //------------------------------------------------------Get--------------------------------------------------------------
 
 
 
@@ -104,7 +162,7 @@ router.post('/adicional', async (req,res) => {
    })
 
 
-   //-------------------------------------get por id----------------------------------------------
+//-----------------------------------------------get por id-----------------------------------------------------------------
 
 
    router.get('/adicional/:id', async (req, res) => {
@@ -128,14 +186,14 @@ router.post('/adicional', async (req,res) => {
 })
 
 
-//-----------------------------------get pelo nome----------------------------------------------
+//-------------------------------------------------get pelo código-------------------------------------------------------------
 
-router.get('/adicional/nome/:nome', async (req, res) => {
+router.get('/adicional/codigo/:codigo', async (req, res) => {
     
-    const {nome} = req.params
+    const {codigo} = req.params
     
     try {
-     const adicional = await Adicional.findOne({ nome: nome })
+     const adicional = await Adicional.findOne({codigo})
      
      
         if(!adicional) {
@@ -155,15 +213,15 @@ router.get('/adicional/nome/:nome', async (req, res) => {
  })
  
 
-//---------------------------------atualização de dados--------------------------------------------
-
+//-------------------------------------atualização de dados chamando pelo id---------------------------------------------------
+-
 router.put('/adicional/:id', async(req, res) => {
     
-    const id = req.params.id
+   
 
-    const { nome, descrição, preço, vegetariano} = req.body
+    const { codigo, nome, descrição, preço, vegetariano} = req.body
 
-    const adicional = {nome, descrição, preço, vegetariano}
+    const adicional = {codigo, nome, descrição, preço, vegetariano}
 
     try {
         const updatedAdicional = await Adicional.updateOne({ _id: id }, adicional)
@@ -181,8 +239,34 @@ router.put('/adicional/:id', async(req, res) => {
  
 })
 
+//---------------------------------atualização de dados chamando pelo codigo---------------------------------------------------
 
-//------------------------------------------Delete-----------------------------------------------
+router.put('/adicional/codigo/:codigo', async(req, res) => {
+    
+    const {codigo} = req.params
+
+    const { nome, descrição, preço, vegetariano} = req.body
+
+    const adicional = {nome, descrição, preço, vegetariano}
+
+    try {
+        const updatedAdicional = await Adicional.updateOne({ codigo }, adicional)
+        
+        if(updatedAdicional.matchedCount === 0) {
+         res.status(404).json({ message: "Adicional informado não existe, porfavor verifique os dados inseridos e tente novamente"})   
+         return
+        }
+
+        res.status(200).json ({ message: 'Adicional atualizado com sucesso'})
+
+    } catch (error) {
+        res.status(500).json({ error: error })
+    }
+ 
+})
+
+
+//--------------------------------------------------Delete pelo id----------------------------------------------------------------------
 
 
 router.delete('/adicional/:id', async (req, res) => {
@@ -207,6 +291,34 @@ router.delete('/adicional/:id', async (req, res) => {
     }
 
 })
+
+
+//------------------------------------------Delete pelo codigo-------------------------------------------------------------------
+
+
+router.delete('/adicional/codigo/:codigo', async (req, res) => {
+
+    const {codigo} = req.params
+
+    const adicional = await Adicional.findOne({ codigo })
+    
+    if(!adicional) {
+        res.status(404).json({ message: 'Adicional informado não existe, porfavor verifique os dados inseridos e tente novamente'})
+        return
+    }
+
+    try {
+
+        await Adicional.deleteOne({ codigo })
+
+        res.status(200).json ({ message: 'Adicional excluido com sucesso'})
+        
+    } catch (error) {
+        res.status(500).json({ error: error })
+    }
+
+})
+
 
 
 
