# routes/bebidaRoutes.js
@@ -4,31 +4,80 @@ const { application } = require('express')
 const Bebida = require('../models/Bebida')
 
 
-//---------------------------------------Post--------------------------------------------
+
+
+
+//-----------------------------------------------Post-------------------------------------------
 
 router.post('/bebida', async (req,res) => {
     // req.body
 
-    const {nome, descrição, preço, álcool} = req.body.id
-
-
-
+    const {codigo, nome, descrição, preço, álcool} = req.body
+    
 
     const bebida = {
-        nome, descrição, preço, álcool
+        codigo, nome, descrição, preço, álcool, 
     }
-    
+
     try {
- 
-//---------------------------------validações----------------------------------
+
+    //-----------------------------------------validações-----------------------------------------
 
 
-    //validação caso esteja faltando inserir um dado
+    //-----------------------validação caso esteja faltando inserir um dado-----------------------    
+
+        if(!nome && !descrição && !preço && !álcool){
+        res.status(400).json({error:'É necessario informar nome, descrição, preço e se a bebida tem álcool'})
+        return 
+        }
+
+        if(!nome && !descrição && !preço){
+            res.status(400).json({error:'É necessario informar nome, descrição e o preço da bebida'})
+            return 
+            }
+    
+        if(!nome && !descrição && !álcool){
+            res.status(400).json({error:'É necessario informar nome, descrição e se a bebida tem álcool'})
+            return 
+            }
+
+        if(!nome && !preço && !álcool){
+            res.status(400).json({error:'É necessario informar nome, preço e se a bebida tem álcool'})
+            return 
+            }
+
+        if(!descrição && !preço && !álcool){
+            res.status(400).json({error:'É necessario informar preço, descrição, preço e se a bebida tem álcool'})
+            return 
+            }
+
+        if(!nome && !descrição ) {
+            res.status(400).json({error:'É necessario informar o nome e a descrição da bebida'})
+            return
+            }
+
+        if(!nome && !preço ) {
+            res.status(400).json({error:'É necessario informar o nome e o preço da bebida'})
+            return
+            }
+
+        if(!nome && !álcool ) {
+            res.status(400).json({error:'É necessario informar o nome e se a bebida tem álcool'})
+            return
+            }
+
+        if(!descrição && !álcool ) {
+            res.status(400).json({error:'É necessario informar a descrição e se a bebida tem álcool'})
+            return
+            }
+        
 
         if(!nome) {
             res.status(400).json({error:'É necessario informar o nome da bebida'})
             return
         }
+
+        
     
         if(!descrição) {
             res.status(400).json({error:'É necessario informar a descrição da bebida'})
@@ -40,9 +89,15 @@ router.post('/bebida', async (req,res) => {
             return
         }
 
+        
+    
+        if(álcool == undefined) {
+            res.status(500).json({error:'É necessario informar se a bebida tem álcool'})
+            return
+        }
 
 
-    //validação caso o dado informado já existe na base de dados
+    //----------------validação caso o dado informado já existe na base de dados---------------------
 
         //nome
         const nomeExiste = await Bebida.findOne ({nome: nome})
@@ -64,6 +119,8 @@ router.post('/bebida', async (req,res) => {
             return
         }
 
+
+        
      
         await Bebida.create(bebida)
     
@@ -72,11 +129,17 @@ router.post('/bebida', async (req,res) => {
     } catch (error) {
         res.status(500).json({ error: error })
     }
+
+
+
     
     })
 
 
-    //--------------------------------------Get---------------------------------------------------
+    
+
+
+    //-------------------------------------------Get---------------------------------------------
    router.get('/bebidas', async (req, res) => {
     try {
 
@@ -91,7 +154,7 @@ router.post('/bebida', async (req,res) => {
    })
 
 
-   //------------------------------------get por id-------------------------------------------
+   //------------------------------------get por id----------------------------------------
 
    router.get('/bebida/:id', async (req, res) => {
     
@@ -101,12 +164,12 @@ router.post('/bebida', async (req,res) => {
     const bebida = await Bebida.findOne({ _id: id })
     
     
-        if(!bebida) {
-            res.status(404).json({ message: 'A bebida informada não existe, porfavor verifique os dados inseridos e tente novamente'})
-            return
-        }
+    if(!bebida) {
+        res.status(404).json({ message: 'A bebida informada não existe, porfavor verifique os dados inseridos e tente novamente'})
+        return
+    }
 
-        res.status(200).json(bebida)
+    res.status(200).json(bebida)
 
    } catch (error) {
     res.status(500).json({ error: error})
@@ -114,13 +177,14 @@ router.post('/bebida', async (req,res) => {
 })
 
 
-//----------------------------------get pelo nome--------------------------------------
-router.get('/bebida/nome/:nome', async (req, res) => {
+//-------------------------------------------------get pelo código-------------------------------------------------------------
+
+router.get('/bebida/codigo/:codigo', async (req, res) => {
     
-    const {nome} = req.params
+    const {codigo} = req.params
     
     try {
-     const bebida = await Bebida.findOne({ nome: nome })
+     const bebida = await Bebida.findOne({codigo})
      
      
         if(!bebida) {
@@ -140,15 +204,19 @@ router.get('/bebida/nome/:nome', async (req, res) => {
  })
  
 
-//-------------------------------------atualização de dados---------------------------------------
+ 
+
+//-------------------------------------atualização de dados pelo id----------------------------------------------
+
+
 
 router.put('/bebida/:id', async(req, res) => {
     
     const id = req.params.id
 
-    const { nome, descrição, preço, álcool} = req.body
+    const { codigo, nome, descrição, preço, álcool } = req.body
 
-    const bebida = {nome, descrição, preço, álcool}
+    const bebida = {codigo, nome, descrição, preço, álcool}
 
     try {
         const updatedBebida = await Bebida.updateOne({ _id: id }, bebida)
@@ -166,8 +234,34 @@ router.put('/bebida/:id', async(req, res) => {
  
 })
 
+//---------------------------------atualização de dados chamando pelo codigo---------------------------------------------------
 
-//--------------------------------------------Delete-------------------------------------
+router.put('/bebida/codigo/:codigo', async(req, res) => {
+    
+    const {codigo} = req.params
+
+    const { nome, descrição, preço, álcool} = req.body
+
+    const bebida = {nome, descrição, preço, álcool}
+
+    try {
+        const updatedBebida = await Bebida.updateOne({ codigo }, bebida)
+        
+        if(updatedBebida.matchedCount === 0) {
+         res.status(404).json({ message: "A bebida informada não existe, porfavor verifique os dados inseridos e tente novamente"})   
+         return
+        }
+
+        res.status(200).json ({ message: 'Bebida atualizada com sucesso'})
+
+    } catch (error) {
+        res.status(500).json({ error: error })
+    }
+ 
+})
+
+
+//---------------------------------------------Delete-------------------------------------------
 
 
 router.delete('/bebida/:id', async (req, res) => {
@@ -175,18 +269,15 @@ router.delete('/bebida/:id', async (req, res) => {
     const id = req.params.id
 
     const bebida = await Bebida.findOne({ _id: id })
+    
+    if(!bebida  ) {
+        res.status(404).json({ message: 'A bebida informada não existe, porfavor verifique os dados inseridos e tente novamente'})
+        return
+    }
+
 
 
     try {
-
-        if(!bebida) {
-            res.status(404).json({ message: 'A bebida informado não existe, porfavor verifique os dados inseridos e tente novamente'})
-            return
-        }
-    
-        else{
-            res.status(200).json(bebida)
-            }
 
         await Bebida.deleteOne({ _id: id})
 
@@ -198,8 +289,35 @@ router.delete('/bebida/:id', async (req, res) => {
 
 })
 
+//------------------------------------------Delete pelo codigo-------------------------------------------------------------------
+
+
+router.delete('/bebida/codigo/:codigo', async (req, res) => {
+
+    const {codigo} = req.params
+
+    const bebida = await Bebida.findOne({ codigo })
+    
+    if(!bebida) {
+        res.status(404).json({ message: 'A Bebida informada não existe, porfavor verifique os dados inseridos e tente novamente'})
+        return
+    }
+
+    try {
+
+        await Bebida.deleteOne({ codigo })
+
+        res.status(200).json ({ message: 'Bebida excluida com sucesso'})
+        
+    } catch (error) {
+        res.status(500).json({ error: error })
+    }
+
+})
+
+
+
 
 
     module.exports = router
-    
     
